# krishi-sakhi

./: LICENSE  README.md
app/: main.py
backend/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  pyproject.toml.bak  requirements.txt
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  otel.py  ws.py
backend/app/models/: __init__.py  activity.py  advisory.py  audit.py  ext.py  farmer.py  geo.py  kb.py  reminder.py  user.py
backend/app/providers/: __init__.py  asr.py  embed.py  llm.py  nlu.py  notify.py  pest.py  prices.py  tts.py  weather.py
backend/app/routers/: __init__.py  activities.py  admin.py  advisories.py  auth.py  convo.py  ext.py  farmers.py  kb.py  privacy.py  reminders.py
backend/app/rules/: __init__.py  builtins.py  engine.py
backend/app/schemas/: __init__.py  user.py
backend/app/security/: __init__.py  auth.py  otp.py  rbac.py
backend/app/tasks/: __init__.py  celery_app.py  jobs.py  notify.py  schedules.py
backend/app/utils/: __init__.py  geo.py  lang.py  media.py  time.py
backend/keys/: README.md
backend/media/: README.md
backend/migrations/: env.py
backend/scripts/: export_user_data.py  init_db.sql  seed_demo.py
backend/tests/: __init__.py  test_activities.py  test_auth.py
